force-app/main/default/objects/Opportunity/fields/AntiguedadListaEspera__c.field-meta.xml
<CustomField>
    <fullName>AntiguedadListaEspera__c</fullName>
    <description>Campo formula que cuenta los días desde la fecha/hora lista de espera</description>
    <formula>NOW() -  FechaHoraListaeEspera__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Antigüedad lista de espera</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>