force-app/main/default/objects/Opportunity/fields/Beta__c.field-meta.xml
<CustomField>
    <fullName>Beta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si es un candidato con el que no se quiere contactar</description>
    <inlineHelpText>Solo se cumplimentará desde Dirección Comercial</inlineHelpText>
    <label>Beta</label>
    <type>Checkbox</type>
</CustomField>