force-app/main/default/objects/Opportunity/fields/CodeSAPResponse__c.field-meta.xml
<CustomField>
    <fullName>CodeSAPResponse__c</fullName>
    <description>Almacena el código de respuesta de la llamada al WS de SAP</description>
    <label>Código respuesta SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>