force-app/main/default/objects/Opportunity/fields/Competidor__c.field-meta.xml
<CustomField>
    <fullName>Competidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Competidor que se ha llevado la oportunidad. Rellenar en el caso de que motivo de pérdida sea otra residencia competencia</description>
    <label>Competidor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competidor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Competidor)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>