force-app/main/default/objects/Opportunity/fields/ConVisita__c.field-meta.xml
<CustomField>
    <fullName>ConVisita__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El flujo de oportunidades rellena este campo si el contacto residente tiene visita</description>
    <label>Con visita</label>
    <type>Checkbox</type>
</CustomField>