force-app/main/default/objects/Opportunity/fields/CriterioPreferenciaListaEspera__c.field-meta.xml
<CustomField>
    <fullName>CriterioPreferenciaListaEspera__c</fullName>
    <description>Indica el criterio que se establece para la lista de espera</description>
    <label>Criterio preferencia lista espera</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resto Fecha inscripción</fullName>
                <label>Fecha inscripción</label>
            </value>
            <value>
                <fullName>Traslado</fullName>
            </value>
            <value>
                <fullName>Prescriptor</fullName>
            </value>
            <value>
                <fullName>Familiar Amavir</fullName>
                <label>Familiar/ Conocido Amavir</label>
            </value>
            <value>
                <fullName>Emergencia Social</fullName>
            </value>
            <value>
                <fullName>Usuario de Centro de día</fullName>
            </value>
            <value>
                <fullName>Derivación</fullName>
                <isActive>false</isActive>
                <label>Derivación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>