force-app/main/default/objects/Opportunity/fields/Derivacion__c.field-meta.xml
<CustomField>
    <fullName>Derivacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se usa para marcar una oportunidad que acaba en derivación y también para marcar una oportunidad de traslado que viene de una derivación. Se tienen en cuenta para la prioridad en la lista de espera.</description>
    <label>Derivación</label>
    <type>Checkbox</type>
</CustomField>