force-app/main/default/objects/Opportunity/fields/DerivacionColaborador__c.field-meta.xml
<CustomField>
    <fullName>DerivacionColaborador__c</fullName>
    <description>Si se ha derivado a un colaborador indica cual</description>
    <label>Derivaciones a otros colaboradores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABG (ASOCIACIÓN BENEFICA GERIATRICA)</fullName>
            </value>
            <value>
                <fullName>CUIDADO Y BIENESTAR</fullName>
            </value>
            <value>
                <fullName>PENSIUM</fullName>
            </value>
            <value>
                <fullName>MSOLUCIONA</fullName>
            </value>
            <value>
                <fullName>ALQUILER SEGURO</fullName>
            </value>
            <value>
                <fullName>RETIRO</fullName>
            </value>
            <value>
                <fullName>CUIDUM</fullName>
            </value>
            <value>
                <fullName>TOP MAYORES</fullName>
            </value>
            <value>
                <fullName>BACULUM</fullName>
            </value>
            <value>
                <fullName>CUIDEMI</fullName>
            </value>
            <value>
                <fullName>ABUELOS PLUS</fullName>
            </value>
            <value>
                <fullName>INVERMAX</fullName>
            </value>
            <value>
                <fullName>MUTUAM</fullName>
            </value>
            <value>
                <fullName>SENNIORS</fullName>
            </value>
            <value>
                <fullName>DEPENCARE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>