force-app/main/default/objects/Opportunity/fields/DetallesMotivoPerdida__c.field-meta.xml
<CustomField>
    <fullName>DetallesMotivoPerdida__c</fullName>
    <description>Detalle del motivo de pérdida</description>
    <label>Detalles motivo pérdida</label>
    <type>TextArea</type>
</CustomField>