force-app/main/default/objects/Opportunity/fields/DetalleTraslado__c.field-meta.xml
<CustomField>
    <fullName>DetalleTraslado__c</fullName>
    <description>Campo para complementar el detalle del traslado</description>
    <label>Detalles motivo traslado</label>
    <type>TextArea</type>
</CustomField>