force-app/main/default/objects/Opportunity/fields/EsperaPlazaPublica__c.field-meta.xml
<CustomField>
    <fullName>EsperaPlazaPublica__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el potencial está a la espera de una plaza pública</description>
    <label>Espera de plaza pública</label>
    <type>Checkbox</type>
</CustomField>