force-app/main/default/objects/Opportunity/fields/FechaDerivacion__c.field-meta.xml
<CustomField>
    <fullName>FechaDerivacion__c</fullName>
    <description>Campo para evitar que los centros hagan trampas con las derivaciones</description>
    <label>Fecha Derivación</label>
    <type>DateTime</type>
</CustomField>