force-app/main/default/objects/Opportunity/fields/FechaHoraListaeEspera__c.field-meta.xml
<CustomField>
    <fullName>FechaHoraListaeEspera__c</fullName>
    <description>Fecha y hora en la que se registra para la fecha de espera</description>
    <label>Fecha y hora lista de espera</label>
    <type>DateTime</type>
</CustomField>