force-app/main/default/objects/Opportunity/fields/FechaHoraReservaPlaza__c.field-meta.xml
<CustomField>
    <fullName>FechaHoraReservaPlaza__c</fullName>
    <description>Fecha y hora de la reserva de plaza</description>
    <label>Fecha y hora reserva de plaza</label>
    <type>DateTime</type>
</CustomField>