force-app/main/default/objects/Opportunity/fields/FechaIngreso__c.field-meta.xml
<CustomField>
    <fullName>FechaIngreso__c</fullName>
    <description>FechaIngreso</description>
    <label>Fecha de ingreso</label>
    <type>Date</type>
</CustomField>