force-app/main/default/objects/Opportunity/fields/FechaIngresoPlanificado__c.field-meta.xml
<CustomField>
    <fullName>FechaIngresoPlanificado__c</fullName>
    <description>Fecha en la que se planifica que ingrese el paciente en la residencia</description>
    <inlineHelpText>Fecha probable de ingreso</inlineHelpText>
    <label>Fecha de Ingreso Planificado</label>
    <type>Date</type>
</CustomField>