force-app/main/default/objects/Opportunity/fields/FechaSalida__c.field-meta.xml
<CustomField>
    <fullName>FechaSalida__c</fullName>
    <description>Fecha en la que el residente deja la plaza</description>
    <label>Fecha de salida</label>
    <type>Date</type>
</CustomField>