force-app/main/default/objects/Opportunity/fields/Fianza__c.field-meta.xml
<CustomField>
    <fullName>Fianza__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se ha pagado fianza</description>
    <label>Fianza</label>
    <type>Checkbox</type>
</CustomField>