force-app/main/default/objects/Opportunity/fields/HoraFin__c.field-meta.xml
<CustomField>
    <fullName>HoraFin__c</fullName>
    <description>Horario de fin de la jornada en centro de día</description>
    <label>Hora fin</label>
    <type>Time</type>
</CustomField>