force-app/main/default/objects/Opportunity/fields/HoraInicio__c.field-meta.xml
<CustomField>
    <fullName>HoraInicio__c</fullName>
    <description>Horario de inicio de la jornada en centro de día</description>
    <label>Hora inicio</label>
    <type>Time</type>
</CustomField>