force-app/main/default/objects/Opportunity/fields/Icono_EnviadoSAP__c.field-meta.xml
<CustomField>
    <fullName>Icono_EnviadoSAP__c</fullName>
    <formula>IF(  ISBLANK(IdExternoSAP__c ),IMAGE(&apos;/resource/IconosIndicadorContacto/Alerta.jpg&apos;, &quot;&quot;, 30, 30) , IMAGE(&apos;/resource/IconosIndicadorContacto/OK.jpg&apos;,&quot;&quot;, 30, 30) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enviado SAP</label>
    <type>Text</type>
</CustomField>