force-app/main/default/objects/Opportunity/fields/IconoJueves__c.field-meta.xml
<CustomField>
    <fullName>IconoJueves__c</fullName>
    <description>Si el campo plaza del mismo día esta relleno muestra un icono, si no muestra otro</description>
    <formula>IF( PlazaJueves__r.PlazaOcupada__c ,IMAGE(&apos;/resource/IconosPlaza/Ocupada.png&apos;, &apos;Ocupado&apos;, 40, 70) , IMAGE(&apos;/resource/IconosPlaza/Libre.png&apos;,&quot;Libre&quot;, 40, 70) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jueves</label>
    <type>Text</type>
</CustomField>