force-app/main/default/objects/Opportunity/fields/IconoRealSAP__c.field-meta.xml
<CustomField>
    <fullName>IconoRealSAP__c</fullName>
    <formula>IF( !RealSAP__c,IMAGE(&apos;/resource/IconosIndicadorContacto/Alerta.jpg&apos;, &quot;&quot;, 30, 30) , IMAGE(&apos;/resource/IconosIndicadorContacto/OK.jpg&apos;,&quot;&quot;, 30, 30) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real SAP</label>
    <type>Text</type>
</CustomField>