force-app/main/default/objects/Opportunity/fields/IdExternoCRM__c.field-meta.xml
<CustomField>
    <fullName>IdExternoCRM__c</fullName>
    <description>Identificador externo del CRM actual. SE usa para las cargas iniciales</description>
    <externalId>true</externalId>
    <label>Identificador de CRM</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>