force-app/main/default/objects/Opportunity/fields/IdExternoSAP__c.field-meta.xml
<CustomField>
    <fullName>IdExternoSAP__c</fullName>
    <description>Identificador externo de la oportunidad. Viene con el valor de espisodio en SAP</description>
    <externalId>true</externalId>
    <label>Identificador de SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>