force-app/main/default/objects/Opportunity/fields/ImportePromocion__c.field-meta.xml
<CustomField>
    <fullName>ImportePromocion__c</fullName>
    <description>Importe para la promoción aplicada a la oportunidad para 30 días</description>
    <formula>IF(NOT(ISBLANK(Promocion__r.Precio30Dias__c)), Promocion__r.Precio30Dias__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe con promoción (30 días)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>