force-app/main/default/objects/Opportunity/fields/MessageSAPResponse__c.field-meta.xml
<CustomField>
    <fullName>MessageSAPResponse__c</fullName>
    <description>Almacena el mensaje de respuesta de la llamada al WS de SAP</description>
    <label>Mensaje Resuesta SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>