force-app/main/default/objects/Opportunity/fields/MotivoIngreso__c.field-meta.xml
<CustomField>
    <fullName>MotivoIngreso__c</fullName>
    <description>Campo de tipo lista de selección para conocer el motivo de ingreso</description>
    <label>Motivo de Ingreso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MotivoIngreso</valueSetName>
    </valueSet>
</CustomField>