force-app/main/default/objects/Opportunity/fields/MotivoPerdida__c.field-meta.xml
<CustomField>
    <fullName>MotivoPerdida__c</fullName>
    <description>Motivo por el que se pierde la oportunidad</description>
    <label>Motivo de pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TipoPerdida__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cierre automático/ Sin noticias</fullName>
                <isActive>false</isActive>
                <label>Cierre automático/ Sin noticias</label>
            </value>
            <value>
                <fullName>Conc. púb Amavir</fullName>
            </value>
            <value>
                <fullName>Conc. púb Otros</fullName>
            </value>
            <value>
                <fullName>Descontento</fullName>
            </value>
            <value>
                <fullName>Descontento / Atención tardía</fullName>
            </value>
            <value>
                <fullName>Distancia</fullName>
            </value>
            <value>
                <fullName>El residente se niega</fullName>
            </value>
            <value>
                <fullName>Episodio anulado en SAP</fullName>
            </value>
            <value>
                <fullName>Exitus en Resid</fullName>
            </value>
            <value>
                <fullName>Exitus Hospital</fullName>
            </value>
            <value>
                <fullName>Fallecimiento</fullName>
            </value>
            <value>
                <fullName>Falta de acuerdo familiar</fullName>
            </value>
            <value>
                <fullName>Fin Es TempReha</fullName>
            </value>
            <value>
                <fullName>Fin Es TempResp</fullName>
            </value>
            <value>
                <fullName>Hospitalización larga duración</fullName>
            </value>
            <value>
                <fullName>Hospital LargaE</fullName>
            </value>
            <value>
                <fullName>Inadaptación</fullName>
            </value>
            <value>
                <fullName>Información a largo plazo / Curiosidad</fullName>
            </value>
            <value>
                <fullName>Ingreso, derivación u otro producto Amavir</fullName>
            </value>
            <value>
                <fullName>Mot. Económicos</fullName>
            </value>
            <value>
                <fullName>No brinda datos o son erróneos / Imposibilidad de contactar</fullName>
            </value>
            <value>
                <fullName>No cumple requisitos de edad</fullName>
            </value>
            <value>
                <fullName>No disponen de transporte (CD)</fullName>
            </value>
            <value>
                <fullName>No interesa precio</fullName>
            </value>
            <value>
                <fullName>No se adapta a sus preferencias</fullName>
            </value>
            <value>
                <fullName>Otra residencia competencia / residencia pequeña / otra CC.AA.</fullName>
            </value>
            <value>
                <fullName>Otro recurso / Domicilio / Solucionado</fullName>
            </value>
            <value>
                <fullName>Plaza o producto no disponible</fullName>
            </value>
            <value>
                <fullName>Plaza pública (concedida, en espera, traslado)</fullName>
            </value>
            <value>
                <fullName>Recuperación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>