force-app/main/default/objects/Opportunity/fields/MotivoTraslado__c.field-meta.xml
<CustomField>
    <fullName>MotivoTraslado__c</fullName>
    <description>Campo de tipo picklist para conocer el motivo por el que se traslada un residente de centro</description>
    <label>Motivo de traslado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concesión plaza pública</fullName>
            </value>
            <value>
                <fullName>Zona/cercanía</fullName>
            </value>
            <value>
                <fullName>Motivos económicos</fullName>
            </value>
            <value>
                <fullName>Reagrupación familiar</fullName>
            </value>
            <value>
                <fullName>Descontento</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>