force-app/main/default/objects/Opportunity/fields/NoEnviar__c.field-meta.xml
<CustomField>
    <fullName>NoEnviar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla para copiar oportunidades de SAP a Salesforce sin enviar las oportunidades de Salesforce a SAP.</description>
    <label>No enviar</label>
    <type>Checkbox</type>
</CustomField>