force-app/main/default/objects/Opportunity/fields/PagoReserva__c.field-meta.xml
<CustomField>
    <fullName>PagoReserva__c</fullName>
    <description>Campo en el que se indica si se ha pagado la reserva</description>
    <label>Pago reserva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Con pago</fullName>
            </value>
            <value>
                <fullName>Sin pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>