force-app/main/default/objects/Opportunity/fields/PerfilPotencialResidente__c.field-meta.xml
<CustomField>
    <fullName>PerfilPotencialResidente__c</fullName>
    <description>Perfil del potencial residente</description>
    <label>Perfil del potencial residente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autónomo</fullName>
            </value>
            <value>
                <fullName>Asistido</fullName>
            </value>
            <value>
                <fullName>Semi-asistido</fullName>
            </value>
            <value>
                <fullName>Alteraciones de conducta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>