force-app/main/default/objects/Opportunity/fields/PlazaDomingo__c.field-meta.xml
<CustomField>
    <fullName>PlazaDomingo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Si ocupa plaza el Domingo en el centro de día ha de rellenarse este campo</description>
    <label>Domingo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plaza__c.DiaSemana__c</field>
            <operation>equals</operation>
            <value>Domingo</value>
        </filterItems>
        <filterItems>
            <field>Plaza__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CentroDia</value>
        </filterItems>
        <filterItems>
            <field>Plaza__c.PlazaInhabilitada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Plaza__c</referenceTo>
    <relationshipLabel>Oportunidades (Domingo)</relationshipLabel>
    <relationshipName>Oportunidades6</relationshipName>
    <type>Lookup</type>
</CustomField>