force-app/main/default/objects/Opportunity/fields/PlazaLunes__c.field-meta.xml
<CustomField>
    <fullName>PlazaLunes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Si ocupa plaza el Lunes en el centro de día ha de rellenarse este campo</description>
    <label>Lunes</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plaza__c.DiaSemana__c</field>
            <operation>equals</operation>
            <value>Lunes</value>
        </filterItems>
        <filterItems>
            <field>Plaza__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CentroDia</value>
        </filterItems>
        <filterItems>
            <field>Plaza__c.PlazaInhabilitada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plaza__c</referenceTo>
    <relationshipLabel>Oportunidades (Lunes)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>