force-app/main/default/objects/Opportunity/fields/PlazaMartes__c.field-meta.xml
<CustomField>
    <fullName>PlazaMartes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Si ocupa plaza el Martes en el centro de día ha de rellenarse este campo</description>
    <label>Martes</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plaza__c.DiaSemana__c</field>
            <operation>equals</operation>
            <value>Martes</value>
        </filterItems>
        <filterItems>
            <field>Plaza__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CentroDia</value>
        </filterItems>
        <filterItems>
            <field>Plaza__c.PlazaInhabilitada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plaza__c</referenceTo>
    <relationshipLabel>Oportunidades (Martes)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>